--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@
               <suiteXmlFiles>
                   <suiteXmlFile>testng.xml</suiteXmlFile>
               </suiteXmlFiles>
+            <systemPropertyVariables>
+      						<executionBrowser>${browser}</executionBrowser>
+					  </systemPropertyVariables>
           </configuration>
         </plugin>
         <plugin>
